<resources>
    <string name="app_name">DifferenziAmo</string>
    <string name="description_navheader">Guida alla raccolta differenziata</string>
    <string name="a_home">Home</string>
    <string name="a_calendario">Calendario</string>
    <string name="a_dovelobutto">Dove lo butto?</string>
    <string name="a_dovesitrova">Dove si trova?</string>
    <string name="a_servizi">Servizi ai cittadini</string>
    <string name="a_impostazioni">Impostazioni</string>
    <string name="a_faq">F.A.Q.</string>
    <string name="a_credits">Credits</string>
    <string name="s_home">Home</string>
    <string name="s_raccolta">Raccolta differenziata</string>
    <string name="s_altro">Altro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_text">Benvenuto in DifferenziAmo! Scegli una sezione o usa il menù a sinistra per iniziare.</string>
    <string name="calendario_data">Data</string>
    <string name="calendario_button">Vai al calendario completo</string>
    <string name="calendario_oggi_puoi_buttare">Oggi puoi buttare:</string>
    <string name="calendario_categoria">Categoria</string>
    <string name="calendario_dove_puoi_buttare">Dove puoi buttare:</string>
    <string name="lunedi">Lunedì</string>
    <string name="martedi">Martedì</string>
    <string name="mercoledi">Mercoledì</string>
    <string name="giovedi">Giovedì</string>
    <string name="venerdi">Venerdì</string>
    <string name="sabato">Sabato</string>
    <string name="domenica">Domenica</string>
    <string name="title_activity_calendario_settimanale">Calendario Settimanale</string>
    <string name="calendario_settimana_title">Calendario settimanale</string>
    <string name="calendario_settimana_istruzioni">METTI IL CONTENITORE FUORI DALLA TUA PROPRIETÀ LA SERA PRIMA DEL GIORNO INDICATO PER IL RITIRO</string>
    <string name="dovelobutto_cerca">Cerca rifiuto...</string>
    <string name="dovelobutto_rifiuto_title">Dove lo butto?</string>
    <string name="dovesitrova_categoria_title">Dove si trova?</string>
    <string name="map_title">Dove si trova?</string>
    <string name="map_indirizzo">Indirizzo</string>
    <string name="map_descrizione">Descrizione</string>
    <string name="map_tipo">TIPO MAPPA</string>
    <string name="servizi_item_title">Servizio</string>
    <string name="che_cos_e">Che cos\'è\?</string>
    <string name="quali_rifiuti_puoi_conferire">Quali rifiuti puoi conferire?</string>
    <string name="quando_dove">Quando e dove?</string>
    <string name="titolo_ritiro_ingombranti">RITIRO INGOMBRANTI</string>
    <string name="cosa_ritiro_ingombranti"> ASIA dà l’opportunità a tutti i cittadini di smaltire gratuitamente i <b>materiali ingombranti</b> che non rientrano nel normale circuito di raccolta materiali ingombranti sono particolarmente dannosi per l’ambiente e possono essere riciclati attraverso lavorazioni in carico ad ASIA.</string>
    <string name="rifiuti_ritiro_ingombranti">Elettrodomestici (lavatrici, cucine, lavastoviglie, forni a microonde, frigoriferi, congelatori, computer, stampanti, scanner, telefoni cellulari e apparecchi elettronici di ogni genere), mobili (scrivanie, sedie, librerie, letti, reti, materassi, comodini, armadi, poltrone, divani, ecc.) ed altri oggetti voluminosi come biciclette, sci, ecc.</string>
    <string name="quandodove_ritiro_ingombranti">Per usufruire del servizio gratuito di ritiro smaltimento ingombranti, è possibile contattare il Numero Verde ASIA <b>800.161010</b> (contattabile dal lunedì al venerdì dalle ore 08:00 alle ore 18:00 e il sabato dalle ore 09:00 alle ore 13:00) o prenotare il ritiro <b>online</b> sul sito www.asianapoli.it/ritiroIngombranti.\n
        Il ritiro, che avverrà a piano strada, è previsto da lunedì al venerdì dalle ore  08:00 alle ore 18:00 e il sabato dalle ore 09:00 alle ore 13:00.\n
        L’utente dovrà soltanto portare i materiali ingombranti (massimo 3 pezzi) su strada pubblica in un punto concordato, ed ASIA provvederà a recuperarli.</string>
    <string name="titolo_isole_ecologiche">ISOLE ECOLOGICHE</string>
    <string name="cosa_isole_ecologiche">Le <b>Isole Ecologiche</b> consentono ai cittadini di smaltire gratuitamente rifiuti che non possono essere riciclati tramite il normale sistema di raccolta, come ingombranti, elettronici, elettrodomestici, etc. Solo i <b>residenti</b> nella città di Napoli possono portare i propri materiali alle isole ecologiche, anche con terzi muniti di deleghe e copia del documento del delegante.\n
        Le isole ecologiche con sede fissa, strutturate in aree recintate, sorvegliate ed attrezzate con container o cisterne per la raccolta differenziata, si suddividono in isole ecologiche <b>complete</b> e <b>ridotte</b>, che differiscono tra loro per il tipo di materiale che l\'utente può smaltire.\n\n
        Nelle <b>isole ecologiche complete</b> è possibile portare tutti i materiali previsti nell\'ambito dello smaltimento domestico.
        Nelle <b>isole ecologiche ridotte</b>, invece, non è possibile portare determinate tipologie di materiali (ad esempio, batterie di auto o di moto, frigoriferi o condizionatori).
        </string>
    <string name="rifiuti_isole_ecologiche">In <b>tutte</b> le isole ecologiche è possibile conferire:\n\n
        - Carta e Cartoncino;\n
        - Farmaci;\n
        - Grandi Elettrodomestici integri e non smontati (come lavatrice, forno, cucina, lavastoviglie, scaldabagno, ecc.);\n
        - Imballaggi in Cartone;\n
        - Imballaggi in Plastica e Metalli;\n
        - Imballaggi in Vetro;\n
        - Indumenti usati;\n
        - Inerti (modesti quantitativi di materiali inerti di risulta provenienti da piccole ristrutturazioni domestiche, piatti, mattonelle, ceramiche e vasi di terracotta);\n
        - Ingombranti (come mobili, divani, materassi, valigie, scaffalature, pedane, oggetti in legno, ferro, vetroresina e plastiche dure);\n
        - Lastre e vetro camera;\n
        - Oli Vegetali: olio da cucina;\n
        - Piccoli Elettrodomestici integri e non smontati (come telefoni, orologi, computer stampanti, giocattoli a pila, plafoniere, videoregistratori, telecomandi e in generale qualsiasi apparecchio alimentato a pile o corrente diverso dalle altre categorie);\n
        - Pile;\n
        - Pneumatici (numero massimo 4 pneumatici conferiti da utenza domestica);\n
        - Sfalci e Potature.\n\n
        <b>Solo nelle isole ecologiche complete</b> (non ridotte) è possibile conferire:\n\n
        - Accumulatori: come batterie esauste al piombo di auto, moto e barche;\n
        - Frigoriferi e Condizionatori;\n
        - Lampadine e neon: come tubi al neon, lampade alogene, lampade fluorescente, a vapori di mercurio, sodio e ioduri;\n
        - Oli Minerali: olio motore di origine fai da te;\n
        - Toner e Cartucce;\n
        - TV e Monitor;\n
        - Vernici e Solventi.\n\n
        In tutte le isole ecologiche <b>non è possibile portare</b> amianto (in tutte le sue forme), gesso (come il cartongesso, i gessolini ed mattoni di gesso), bitume (come le guaine) e rifiuti indifferenziati. L\'amianto, il gesso e il bitume vanno smaltiti in proprio rivolgendosi a centri autorizzati, mentre i rifiuti indifferenziati tramite gli appositi cassonetti o il porta a porta.</string>
    <string name="quandodove_isole_ecologiche">Le isole ecologiche complete disponibili sono situate in:\n\n
        - Via Giovanni Antonio Campano - quartiere Piscinola;\n
        - Via Saverio Gatto - quartiere Colli Aminei;\n
        - Viale della Resistenza - quartiere Scampia;\n
        - Via Emilio Salgari - quartiere Ponticelli;\n
        - Via Nelson Mandela - quartiere Pianura (Polo Artigianale).\n\n
        Le isole ecologiche ridotte disponibili sono situate in:\n\n
        - Via Mastellone - Quartiere Barra;\n
        - Via Arturo Labriola - Quartiere Fuorigrotta (Cinema MED);\n
        - Via Vicinale Vallone di Miano - Quartiere Secondigliano;\n
        - Viale Ponte della Maddalena - Quartiere Mercato;\n
        - Via Arena alla Sanità - Quartiere Sanità.\n\n
        Le isole ecologiche sono <b>aperte</b>:\n\n
        - il Lunedì dalle 14 alle 19;\n
        - da Martedì a Sabato dalle 8 alle 19;\n
        - la Domenica dalle 8 alle 14.\n\n
        <b>Solo</b> le isole in Via Arena alla Sanità e Via Nelson Mandela, invece, sono aperte dal Lunedì al Sabato dalle 14 alle 19.</string>
    <string name="titolo_ecopunti_mobili">ECOPUNTI MOBILI</string>
    <string name="cosa_ecopunti_mobili">Gli <b>ecopunti mobili</b> sono isole ecologiche mobili o itineranti, caratterizzate da un furgone attrezzato per la raccolta differenziata e l\'avvio al recupero di materiali elettrici ed elettronici (RAEE), ingombranti ed oli vegetali esausti, consegnati esclusivamente e gratuitamente da cittadini. Solo i <b>residenti</b> nella città di Napoli possono portare i propri materiali agli ecopunti, anche con terzi muniti di deleghe e copia del documento del delegante.\n
        Essi si suddividono in ecopunti mobili <b>elettrodomestici</b>, ecopunti mobili <b>ingombranti</b> ed ecopunti mobili <b>oli vegetali esausti</b>, che differiscono per la tipologia di materiale che l\'utente può smaltire.</string>
    <string name="rifiuti_ecopunti_mobili">Presso gli <b>ecopunti elettrodomestici</b> è possibile smaltire:\n\n
        - Piccoli Elettrodomestici integri e non smontati (come telefoni, orologi, computer stampanti, giocattoli a pila, plafoniere, videoregistratori, telecomandi e in generale qualsiasi apparecchio alimentato a pile o corrente diverso dalle altre categorie);\n
        - Pile;\n
        - Toner e Cartucce;\n
        - TV e Monitor.\n\n
        Presso gli <b>ecopunti ingombranti</b> è possibile smaltire:\n\n
        - Farmaci;\n
        - Frigoriferi e condizionatori;\n
        \- Ingombranti (come mobili, divani, materassi, valigie, scaffalature, pedane, oggetti in legno, ferro, vetroresina e plastiche dure)\n
        - Lastre e vetro camera;\n
        - Piccoli elettrodomestici integri e non smontati (come telefoni, orologi, computer stampanti, giocattoli a pila, plafoniere, videoregistratori, telecomandi e in generale qualsiasi apparecchio alimentato a pile o corrente diverso dalle altre categorie).\n\n
        Presso gli <b>ecopunti oli vegetali esausti</b> è possibile smaltire l\'olio vegetale esausto derivante da uso domestico e opportunamente raccolto tramite una comune bottiglia (in plastica o vetro).</string>
</resources>