<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/a_home" />
    </group>


    <item android:title="@string/s_raccolta">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_calendario"
                android:icon="@drawable/ic_calendario"
                android:title="@string/a_calendario" />
            <item
                android:id="@+id/nav_dovelobutto"
                android:icon="@drawable/ic_dovelobutto"
                android:title="@string/a_dovelobutto" />
            <item
                android:id="@+id/nav_dovesitrova"
                android:icon="@drawable/ic_dovesitrova"
                android:title="@string/a_dovesitrova" />
            <item
                android:id="@+id/nav_servizi"
                android:icon="@drawable/ic_servizi"
                android:title="@string/a_servizi" />
            </group>
        </menu>
    </item>


    <item android:title="@string/s_altro">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_impostazioni"
                    android:icon="@drawable/ic_impostazioni"
                    android:title="@string/a_impostazioni" />
                <item
                    android:id="@+id/nav_faq"
                    android:icon="@drawable/ic_faq"
                    android:title="@string/a_faq" />
            </group>
        </menu>
    </item>

</menu>
