<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.differenziamo.CalendarioSettimanaActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/scrollView1"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_indirizzo_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendario_settimana_istruzioni"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView00"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="@string/lunedi"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <TableLayout
            android:id="@+id/table_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TableLayout>

        <TextView
            android:id="@+id/textView01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="23dp"
            android:gravity="left"
            android:text="@string/martedi"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <TableLayout
            android:id="@+id/table_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TableLayout>

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="23dp"
            android:gravity="left"
            android:text="@string/mercoledi"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <TableLayout
            android:id="@+id/table_layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TableLayout>

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="23dp"
            android:gravity="left"
            android:text="@string/giovedi"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <TableLayout
            android:id="@+id/table_layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TableLayout>

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="23dp"
            android:gravity="left"
            android:text="@string/venerdi"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <TableLayout
            android:id="@+id/table_layout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TableLayout>

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="23dp"
            android:gravity="left"
            android:text="@string/sabato"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <TableLayout
            android:id="@+id/table_layout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TableLayout>

        <TextView
            android:id="@+id/TextView06"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="23dp"
            android:gravity="left"
            android:text="@string/domenica"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <TableLayout
            android:id="@+id/table_layout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TableLayout>
    </LinearLayout>
</ScrollView>
</RelativeLayout>
